# fbs-autobook-at-hkust

./: README.md  fbs.py  main.py  pyproject.toml
at_hkust/: auth.py  fbs.py  main.py  ui.py
ui/: setup.py  ui.py  ui_debug.py
